concord_macros/tests/dsl/fail/fail_generated_local_headers_in_policy_expr.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client GeneratedLocalHeadersPolicyApi {
        base "https://example.com"
    }

    GET Ping
    path ["ping"]
    header "X-Leak" = headers.len()
    -> Text<String>
}

fn main() {}
